# rshell

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  commitmsg.txt  package-lock.json  package.json  pass  tauri.conf.json  updater.key.pub
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/api/: commands.rs  mod.rs
src-tauri/src/api/commands/: audit.rs  command_sanitize.rs  common.rs  environments.rs  etcd.rs  metrics.rs  reachability.rs  redis.rs  sessions.rs  sftp.rs  sync.rs  system.rs  terminal.rs  zookeeper.rs
src-tauri/src/api/commands/mysql/: audit.rs  connection.rs  mod.rs  query.rs
src-tauri/src/api/commands/redis/: audit.rs  codec.rs  connection.rs  keys.rs  mod.rs  types.rs
src-tauri/src/app/: mod.rs  state_tests.rs
src-tauri/src/app/state/: audit.rs  audit_parse.rs  convert.rs  environments.rs  etcd.rs  metrics.rs  mod.rs  mysql.rs  postgresql_sync.rs  redis.rs  sessions.rs  sftp.rs  ssh_helpers.rs  terminal_io.rs  zookeeper.rs
src-tauri/src/app/state/mysql/: client.rs  (+6 more)
src-tauri/src/domain/: audit.rs  etcd.rs  mod.rs  mysql.rs  redis.rs  session.rs  terminal.rs  zookeeper.rs
src-tauri/src/infra/: mod.rs  store.rs  store_audit.rs  store_secret.rs  telnet_client.rs
src-tauri/src/infra/ssh_client/: mod.rs  tests.rs  worker.rs
src-tauri/ui/: index.html  package-lock.json  package.json
src-tauri/ui/scripts/: split-i18n.mjs
src-tauri/ui/src/: App.tsx  i18n-context.tsx  i18n.ts  main.tsx  theme-context.tsx
src-tauri/ui/src/app/: AppEtcdSection.tsx  AppHomeSection.tsx  AppMySqlDataSection.tsx  AppMySqlSection.tsx  AppRedisSection.tsx  AppTerminalSection.tsx  AppZookeeperSection.tsx
src-tauri/ui/src/components/: AuditLogModal.tsx  CloseConfirmModal.tsx  ColorThemeToggle.tsx  CommandPaletteModal.tsx  ConfirmDialog.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  SessionList.tsx  TerminalFontControls.tsx  TerminalPane.tsx  ThemeControls.tsx  UpgradeConfirmModal.tsx
src-tauri/ui/src/hooks/: useAppShell.ts  useAuditLogs.ts  useDownloadTasks.ts  useEtcdActions.ts  useMysqlActions.ts  useQuitConfirm.ts  useRedisActions.ts  useSessionActions.ts  useSessionListColumns.ts  useSessionPing.ts  useSftpState.ts  useSplitPanels.ts  useSystemTray.ts  useTerminalOutput.ts  useUpdater.ts  useWorkspaceTabs.ts  useZookeeperActions.ts
src-tauri/ui/src/i18n/: enUS.ts  index.ts  keys.ts  runtime.ts  zhCN.ts
src-tauri/ui/src/lib/: appTheme.ts  orderSessionsByRecent.ts  recentSessions.ts  sessionInput.ts  terminalFontFamily.ts  terminalFontSize.ts  tryConnectSessionWithPasswordPrompt.ts  workspacePanelWidths.ts  workspaceTabIds.ts  xtermThemes.ts
src-tauri/ui/src/pages/: EtcdPage.tsx  HomePage.tsx  MySqlDataPage.tsx  MySqlPage.tsx  RedisPage.tsx  TerminalPage.tsx  ZookeeperPage.tsx
src-tauri/ui/src/services/: bridge.ts  types.ts
src-tauri/ui/src/styles/: app.css  base.css  download.css  home.css  modals.css  responsive.css  sessions.css  terminal.css  theme-light.css
(+140 files in other folders)
