[package]
name = "rshell"
version = "0.1.15"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
dirs = "6"
russh = "0.49"
russh-keys = "0.49"
ssh2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.tauri]
